# ambiata-cli

./: .ghci  .gitignore  .gitmodules  .projectile  README.md  REVIEWERS  ambiata-cli.cabal  ambiata-cli.lock-7.10.2  ambiata-cli.lock-7.8.4  boris-git.toml  boris.toml  cabal  mafia  master.toml  tatooine-cli.cabal
dev/: data-flows.md
doc/: Makefile  README  download.md  setup.md  upload.md
doc/examples/: ambiata-upload.service  run_ambiata_upload.sh
doc/examples/raw/: run_ambiata_upload.sh
doc/examples/systemd/: ambiata-download.service  ambiata-upload.service
doc/examples/sysvinit/: ambiatad  start-download-example  start-upload-example
doc/examples/upstart/: ambiata-download.conf  ambiata-upload.conf
doc/templates/: pdf.tex
main/: ambiata-daemon.hs  ambiata.hs
src/: Ambiata.hs  TatooineCli.hs
src/Ambiata/: Cli.hs
src/Ambiata/Cli/: Api.hs  Credentials.hs  Data.hs  Downloads.hs  Env.hs  Files.hs  Http.hs  Incoming.hs  Json.hs  Processing.hs  Rest.hs  Standalone.hs
src/Ambiata/Cli/Api/: Download.hs  Upload.hs
src/Ambiata/Cli/Data/: Api.hs  Download.hs  Env.hs  Exec.hs  File.hs  Transfer.hs  Upload.hs
src/Ambiata/Cli/Json/: Download.hs  Upload.hs
src/TatooineCli/: Credentials.hs  Data.hs  Downloads.hs  Env.hs  Files.hs  Incoming.hs  Json.hs  Processing.hs
test/: test-cli.hs  test-io.hs  test-smoke.hs  test.hs
test/Test/Ambiata/: Cli.hs
test/Test/Ambiata/Cli/: Arbitrary.hs  Data.hs  Incoming.hs  Json.hs
test/Test/Cli/Ambiata/Cli/: Linking.hs
test/Test/IO/Ambiata/Cli/: Credentials.hs  Downloads.hs  Env.hs  Http.hs  Incoming.hs  Processing.hs  Standalone.hs  Util.hs
test/Test/IO/Ambiata/Cli/Api/: Upload.hs
test/Test/IO/TatooineCli/: Credentials.hs  Downloads.hs  Env.hs  Incoming.hs  Processing.hs  Util.hs
test/Test/TatooineCli/: Arbitrary.hs  Data.hs  Incoming.hs  Json.hs
test/cli/core/: runner.sh
test/smoke/core/: runner.sh
test/smoke/processing/: run
