name:                  ambiata-cli
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Injest data into s3 via STS
category:              Daemon
cabal-version:         >= 1.8
build-type:            Custom
description:           Client for interacting with the Ambiata API

flag staticgmp
  description:         Statically link libgmp.
  default:             False

library
  build-depends:
                       base                            >= 3          && < 5
                     , aeson                           == 0.8.*
                     , amazonka
                     , amazonka-core                   == 1.3.2
                     , amazonka-sts                    == 1.3.2
                     , ambiata-mismi-core
                     , ambiata-mismi-s3
                     , ambiata-p
                     , ambiata-twine
                     , ambiata-x-either
                     , ambiata-x-optparse
                     , base64-bytestring               == 1.0.*
                     , blaze-builder                   == 0.4.*
                     , bytestring                      == 0.10.*
                     , cryptohash                      == 0.11.*
                     , clock                           == 0.5.*
                     , data-default                    == 0.5.*
                     , directory                       == 1.2.*
                     , either                          == 4.3.*
                     , envparse                        == 0.2.1
                     , exceptions                      >= 0.6        && < 0.9
                     , filelock                        == 0.1.*
                     , filepath                        == 1.3.*
                     , hslogger                        == 1.2.*
                     , http-client                     == 0.4.18.*
                     , http-client-tls                 == 0.2.*
                     , http-types                      == 0.8.*
                     -- FIX Remove when mismi is upgraded
                     -- https://github.com/ambiata/mismi/pull/274
                     , ini                             == 0.3.3
                     , lens                            >= 4.8       && <= 4.10
                     , mtl                             == 2.2.*
                     , network-uri                     == 2.6.*
                     , retry                           == 0.6.*
                     , old-locale                      == 1.0.*
                     , text                            == 1.2.1.*
                     , time                            == 1.4.*
                     , transformers                    >= 0.3        && < 0.5
                     , unix                            == 2.7.*




  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Ambiata.Cli
                       Ambiata.Cli.Api
                       Ambiata.Cli.Data
                       Ambiata.Cli.Http
                       Ambiata.Cli.Incoming
                       Ambiata.Cli.Json
                       Ambiata.Cli.Files
                       Ambiata.Cli.Processing
                       Ambiata.Cli.Env
                       Ambiata.Cli.Rest
                       Ambiata.Cli.Downloads

                       Ambiata.Cli.Api.Download
                       Ambiata.Cli.Api.Upload

                       Ambiata.Cli.Data.Api
                       Ambiata.Cli.Data.Download
                       Ambiata.Cli.Data.Env
                       Ambiata.Cli.Data.File
                       Ambiata.Cli.Data.Transfer
                       Ambiata.Cli.Data.Upload

                       Ambiata.Cli.Json.Download
                       Ambiata.Cli.Json.Upload

executable ambiata-daemon
  if flag(staticgmp)
    ghc-options:       -Wall -threaded -O2 -pgml gcc-with-gmp.sh
  else
    ghc-options:       -Wall -threaded -O2

  hs-source-dirs:
                       gen
  main-is:
                       ../main/ambiata-daemon.hs

  build-depends:     base                             >= 3          && < 5
                   , hslogger
                   , ambiata-p
                   , ambiata-cli
                   , optparse-applicative

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                      test

  build-depends:
                      base                            >= 3          && < 5
                    , QuickCheck                      == 2.7.*
                    , ambiata-cli
                    , ambiata-disorder-aeson
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mismi-core-test
                    , ambiata-mismi-s3
                    , ambiata-mismi-s3-test
                    , ambiata-p
                    , directory
                    , filepath
                    , quickcheck-instances            == 0.3.*
                    , text                            == 1.2.1.*
                    , time
                    , turtle                          == 1.2.*


test-suite test-io
  type:               exitcode-stdio-1.0

  main-is:            test-io.hs

  ghc-options:        -Wall -threaded -O2

  hs-source-dirs:
                      test

  build-depends:
                      base                            >= 3          && < 5
                    , QuickCheck                      == 2.7.*
                    , aeson
                    , ambiata-cli
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mismi-core
                    , ambiata-mismi-core-test
                    , ambiata-mismi-s3
                    , ambiata-mismi-s3-test
                    , ambiata-p
                    , ambiata-twine
                    , bytestring
                    , containers                      == 0.5.*
                    , data-default                    == 0.5.*
                    , directory
                    , either
                    , filepath
                    , http-client                     == 0.4.18.*
                    , http-types                      == 0.8.*
                    , network                         == 2.6.*
                    , quickcheck-instances            == 0.3.*
                    , random                          == 1.1.*
                    , retry
                    , scotty
                    , temporary
                    , text                            == 1.2.1.*
                    , time
                    , transformers
                    , turtle                          == 1.2.*
                    , unix

test-suite test-cli
  type:               exitcode-stdio-1.0

  main-is:            test-cli.hs

  ghc-options:        -Wall -threaded -O2

  hs-source-dirs:
                      test

  build-depends:
                      base                            >= 3          && < 5
                    , QuickCheck                      == 2.7.*
                    , ambiata-cli
                    , ambiata-disorder-aeson
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mismi-core-test
                    , ambiata-mismi-s3-test
                    , ambiata-p
                    , directory
                    , filepath
                    , quickcheck-instances            == 0.3.*
                    , text                            == 1.2.1.*
                    , time
                    , turtle                          == 1.2.*
