name:                  ambiata-cli
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Injest data into s3 via STS
category:              Daemon
cabal-version:         >= 1.8
build-type:            Custom
description:           Client for interacting with the Ambiata API

flag staticgmp
  description:         Statically link libgmp.
  default:             False

library
  build-depends:
                       base                            >= 3          && < 5
                     , aeson                           == 0.8.*
                     , amazonka
                     , amazonka-core                   == 1.3.6
                     , amazonka-sts                    == 1.3.6
                     , ambiata-mismi-core
                     , ambiata-mismi-s3
                     , ambiata-p
                     , ambiata-tinfoil
                     , ambiata-twine
                     , ambiata-x-eithert
                     , ambiata-x-optparse
                     , ambiata-zodiac-core
                     , ambiata-zodiac-http-client
                     , base64-bytestring               == 1.0.*
                     , blaze-builder                   == 0.4.*
                     , bytestring                      == 0.10.*
                     , cryptohash                      == 0.11.*
                     , conduit                         == 1.2.*
                       -- Temporary workaround for http-client.
                       -- https://github.com/erikd-ambiata/test-warp-wai/issues/1
                     , connection                      == 0.2.5
                     , clock                           == 0.5.*
                     , data-default                    == 0.5.*
                     , directory                       == 1.2.*
                     , envparse                        == 0.2.1
                     , exceptions                      >= 0.6        && < 0.9
                     , filelock                        == 0.1.*
                     , filepath                        == 1.3.*
                     , hslogger                        == 1.2.*
                     , http-client                     == 0.4.18.*
                     , http-client-tls                 == 0.2.*
                     , http-types                      == 0.8.*
                     , lens                            >= 4.8       && < 4.150
                     , mtl                             == 2.2.*
                     , process                         == 1.2.*
                     , network-uri                     == 2.6.*
                     , retry                           == 0.7.*
                     , old-locale                      == 1.0.*
                     , semigroups                      == 0.18.*
                     , text                            == 1.2.*
                     , time                            >= 1.4        && < 1.7
                     , transformers                    >= 0.3        && < 0.6
                     , unix                            == 2.7.*
                     , vector                          == 0.11.*




  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Ambiata.Cli
                       Ambiata.Cli.Api
                       Ambiata.Cli.Data
                       Ambiata.Cli.Http
                       Ambiata.Cli.Incoming
                       Ambiata.Cli.Json
                       Ambiata.Cli.Files
                       Ambiata.Cli.Processing
                       Ambiata.Cli.Env
                       Ambiata.Cli.Rest
                       Ambiata.Cli.Downloads

                       Ambiata.Cli.Api.Download
                       Ambiata.Cli.Api.Upload

                       Ambiata.Cli.Data.Api
                       Ambiata.Cli.Data.Download
                       Ambiata.Cli.Data.Env
                       Ambiata.Cli.Data.Exec
                       Ambiata.Cli.Data.File
                       Ambiata.Cli.Data.Transfer
                       Ambiata.Cli.Data.Upload

                       Ambiata.Cli.Json.Download
                       Ambiata.Cli.Json.Upload

                       Ambiata.Cli.Standalone

executable ambiata-daemon
  if flag(staticgmp)
    ghc-options:       -Wall -threaded -O2 -pgml gcc-with-gmp.sh
  else
    ghc-options:       -Wall -threaded -O2

  hs-source-dirs:
                       gen
  main-is:
                       ../main/ambiata-daemon.hs

  build-depends:     base                             >= 3          && < 5
                   , hslogger
                   , ambiata-p
                   , ambiata-cli
                   , optparse-applicative
                   , ambiata-x-optparse
                   , text                            == 1.2.1.*

executable ambiata
  if flag(staticgmp)
    ghc-options:       -Wall -threaded -O2 -pgml gcc-with-gmp.sh
  else
    ghc-options:       -Wall -threaded -O2

  hs-source-dirs:
                       gen
  main-is:
                       ../main/ambiata.hs

  build-depends:     base                             >= 3          && < 5
                   , ambiata-cli
                   , ambiata-p
                   , ambiata-mismi-core
                   , ambiata-mismi-s3
                   , ambiata-x-eithert
                   , ambiata-x-optparse
                   , envparse                        == 0.2.1
                   , optparse-applicative
                   , text

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                      test

  build-depends:
                      base                            >= 3          && < 5
                    , QuickCheck                      == 2.8.*
                    , ambiata-cli
                    , ambiata-disorder-aeson
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mismi-core
                    , ambiata-mismi-core-test
                    , ambiata-mismi-s3
                    , ambiata-mismi-s3-test
                    , ambiata-p
                    , ambiata-zodiac-tsrp
                    , ambiata-zodiac-tsrp-test
                    , directory
                    , filepath
                    , quickcheck-instances            == 0.3.*
                    , text                            == 1.2.*
                    , time
                    , turtle                          == 1.2.*


test-suite test-io
  type:               exitcode-stdio-1.0

  main-is:            test-io.hs

  ghc-options:        -Wall -threaded -O2

  hs-source-dirs:
                      test

  build-depends:
                      base                            >= 3          && < 5
                    , QuickCheck                      == 2.8.*
                    , aeson
                    , ambiata-cli
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mismi-core
                    , ambiata-mismi-core-test
                    , ambiata-mismi-s3
                    , ambiata-mismi-s3-test
                    , ambiata-p
                    , ambiata-twine
                    , ambiata-x-eithert
                    , ambiata-zodiac-tsrp
                    , ambiata-zodiac-tsrp-test
                    , bytestring
                    , containers                      == 0.5.*
                    , data-default                    == 0.5.*
                    , directory
                    , envparse                        == 0.2.1
                    , filepath
                    , http-client                     == 0.4.18.*
                    , http-types                      == 0.8.*
                    , mtl
                    , network                         == 2.6.*
                    , quickcheck-instances            == 0.3.*
                    , random                          == 1.1.*
                    , retry
                    , scotty
                    , temporary
                    , text                            == 1.2.*
                    , time
                    , transformers
                    , turtle                          == 1.2.*
                    , unix

test-suite test-cli
  type:               exitcode-stdio-1.0

  main-is:            test-cli.hs

  ghc-options:        -Wall -threaded -O2

  hs-source-dirs:
                      test

  build-depends:
                      base                            >= 3          && < 5
                    , QuickCheck                      == 2.8.*
                    , ambiata-cli
                    , ambiata-disorder-aeson
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mismi-core-test
                    , ambiata-mismi-s3-test
                    , ambiata-p
                    , directory
                    , filepath
                    , quickcheck-instances            == 0.3.*
                    , text                            == 1.2.*
                    , time
                    , turtle                          == 1.2.*
